fixed width on mobile devices for informacoes

--- a/styles.css
+++ b/styles.css
@@ -615,6 +615,10 @@ a.anchor-contato {
         margin: 0 0 5% 0;
     }
 
+    .box-informacoes {
+        width: 100%;
+    }
+
 
   }
 
